--- a/docs/openapi/plazoleta.yaml
+++ b/docs/openapi/plazoleta.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.3
 info:
-  title: restaurants-service API
+  title: plazoleta-service API
   version: 1.0.0
-  description: API for restaurants and dishes
+  description: API for restaurants and plates
 servers:
   - url: http://localhost:8082
 security:
@@ -51,6 +51,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/plates:
+    post:
+      tags: [Plates]
+      summary: Create plate (OWNER of the restaurant)
+      description: Only the restaurant owner can create plates for their restaurant. Initial status is active = true.
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PlateCreateRequest'
+      responses:
+        '201':
+          description: Created
+          headers:
+            Location:
+              description: URI of the created resource
+              schema: { type: string }
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlateResponse'
+        '400':
+          description: Validation error (price > 0, required fields)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401': { description: Unauthorized }
+        '403':
+          description: Forbidden (requires OWNER and ownership of the restaurant)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Restaurant not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '409':
+          description: Plate with same name already exists in restaurant (if applicable)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   securitySchemes:
     bearerAuth:
@@ -96,6 +147,48 @@ components:
         phone: { type: string }
         logoUrl: { type: string }
         ownerId: { type: integer, format: int64 }
+
+    PlateCreateRequest:
+      type: object
+      required: [name, price, description, imageUrl, category, restaurantId]
+      properties:
+        name:
+          type: string
+          minLength: 1
+          maxLength: 100
+        price:
+          type: integer
+          minimum: 1
+        description:
+          type: string
+          minLength: 1
+          maxLength: 1000
+        imageUrl:
+          type: string
+          format: uri
+          maxLength: 255
+        category:
+          $ref: '#/components/schemas/PlateCategory'
+        restaurantId:
+          type: integer
+          format: int64
+
+    PlateResponse:
+      type: object
+      properties:
+        id: { type: integer, format: int64 }
+        name: { type: string }
+        price: { type: integer }
+        description: { type: string }
+        imageUrl: { type: string }
+        category: { $ref: '#/components/schemas/PlateCategory' }
+        active: { type: boolean }
+        restaurantId: { type: integer, format: int64 }
+
+    PlateCategory:
+      type: string
+      enum: [ENTRADA, PRINCIPAL, POSTRE, BEBIDA]
+
     ErrorResponse:
       type: object
       properties:
