--- a/docs/openapi/plazoleta.yaml
+++ b/docs/openapi/plazoleta.yaml
@@ -102,6 +102,51 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /api/v1/plates/{id}:
+    put:
+      tags: [Plates]
+      summary: Update plate price and description (OWNER of the restaurant)
+      description: Only the restaurant owner can update plates of their restaurant. Only price and description are allowed to be modified.
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema: { type: integer, format: int64 }
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PlateUpdateRequest'
+      responses:
+        '200':
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PlateResponse'
+        '400':
+          description: Validation error (price > 0, description required)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401': { description: Unauthorized }
+        '403':
+          description: Forbidden (requires OWNER and ownership of the restaurant)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Plate not found or Restaurant not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   securitySchemes:
     bearerAuth:
@@ -184,6 +229,18 @@ components:
         category: { $ref: '#/components/schemas/PlateCategory' }
         active: { type: boolean }
         restaurantId: { type: integer, format: int64 }
+
+    PlateUpdateRequest:
+      type: object
+      required: [price, description]
+      properties:
+        price:
+          type: integer
+          minimum: 1
+        description:
+          type: string
+          minLength: 1
+          maxLength: 1000
 
     PlateCategory:
       type: string
